# esp-tflite-micro

./: CMakeLists.txt
examples/hello_world/: 10model6400s.tflite  LSTMCNNSIMPLE.tflite  README1.txt  letgo.h  lstmbi.h  lstmbi.tflite  lstmsimplecnn.h  oldcodes.c  partitions.csv  trash
examples/hello_world/.cache/clangd/index/: common_functions.h.CE2443F66517BC4A.idx  constants.cc.364C1E3A8EF99415.idx  constants.h.81186EC53AA1720A.idx  csi_matrices.cc.07990CA5D306F77A.idx  csi_matrices.h.28EC7D849CCFA785.idx  esp_nn_add_ansi.c.528EB018BE2F7729.idx  esp_nn_avg_pool_ansi.c.C01A2DC62C785AC3.idx  esp_nn_conv_ansi.c.45F3298F5D440CA3.idx  esp_nn_conv_opt.c.22F4FE78A190B4C7.idx  esp_nn_defs.h.B68A92B713FD6524.idx  esp_nn_depthwise_conv_ansi.c.F1CBCB60059F8D2D.idx  esp_nn_depthwise_conv_opt.c.8FD77E7F300B01CF.idx  esp_nn_fully_connected_ansi.c.7C037EACA2442EF1.idx  esp_nn_max_pool_ansi.c.4C87B7A04E088A06.idx  esp_nn_mul_ansi.c.DBACEF55F76EFD8E.idx  (+17 more)
examples/hello_world/main/: CMakeLists.txt  csi_matrices.cc  csi_matrices.h  image_generator.cc  image_generator.h  main.cc  main_functions.cc  main_functions.h  model.cc  mqtt.c  mqtt.h  output_handler.cc  output_handler.h  stb_image_write.h  wifi.cc  wifi.h  wifi_sensing.c  wifi_sensing.h  wifi_test_code.c  wifi_test_code.h  wps.c  wps.h
examples/hello_world/models/: 10modelgrus.tflite  TCNMODEL.tflite  grufff.h  grussssfff.h  letgo.h  letgosssss.h  lstmwithbatchanddropout.tflite  shaped400gru8.tflite  shaped400grutwo44.tflite  shapedgru4one.tflite  tcnmodelnottrainned.h  testtt.cc  twgrumodeltrainned.h
